# MineGame

./: .clang-tidy  .clangd  .gitignore  BuildAndRun.ps1  CMakeLists.txt  FutureImprovements.md  README.md
assets/: biome_params.json
assets/biomes/: cave.json  desert.json  forest.json  plains.json
assets/blocks/: air.json  dirt.json  glass.json  grass.json  leaves.json  oak.json  sand.json  stone.json  water.json  wood.json
assets/prefabs/: oak_small.json
assets/shaders/: chunk.frag  chunk.vert
docs/: asset-formats.md
include/: block_system.h  camera.h  chat.h  chunk.h  chunk_serial.h  chunk_worker.h  commands.h  debug.h  hud.h  player.h  renderer.h  world.h  world_save.h
src/: block_system.c  camera.c  chat.c  chunk.c  chunk_serial.c  chunk_worker.c  commands.c  debug.c  hud.c  main.c  player.c  renderer.c  stb_perlin.c  utils.c  world.c  world_save.c
src/core/: camera.h  color.h  fileio.c  fileio.h  log.c  log.h  mesh_handle.h  noise.c  noise.h  tint.h  utils.c  utils.h  vecmath.h
src/input/: input.c  input.h  raylib_input.c
src/persistence/: chunk_serial.c  chunk_serial.h  world_save.c  world_save.h
src/platform/: platform.h  raylib_platform.c
src/player/: player.c  player.h
src/render/: backend.h  camera.c  camera.h  hud.c  hud.h  raylib_backend.c  renderer.c  renderer.h  rl_compat.h
src/ui/: chat.c  chat.h  commands.c  commands.h  debug.c  debug.h
src/world/: biome.c  biome.h  block_system.c  block_system.h  chunk.c  chunk.h  chunk_worker.c  chunk_worker.h  prefab.c  prefab.h  prefab_capture.c  prefab_capture.h  world.c  world.h
